--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ITECFinance</title>
+    <title>ITecFinance</title>
 </head>
 <body>
-    <h1>Bem-vindo ao ITECFinance!</h1>
+    <h1>Bem-vindo ao ITecFinance!</h1>
     <p>Este é o nosso site oficial.</p>
 </body>
 </html>
